lessons 52-58 PR changes
Signed-off-by: AlexeyNiyazov <psychotrance92@yandex.ru>