@@ -4,7 +4,6 @@ import com.walking.lesson57_stream_collect_collector.model.Department;
 import com.walking.lesson57_stream_collect_collector.model.Employee;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Предоставьте список всех сотрудников компании.
@@ -14,6 +13,6 @@ public class Task1 implements StatisticTask<List<Employee>> {
     public List<Employee> calculate(List<Department> departments) {
         return departments.stream()
                 .flatMap(dep -> dep.getEmployees().stream())
-                .collect(Collectors.toList());
+                .toList();
     }
 }
